# warphash-hackster

hash_controller/: .cproject  .project  .vitis_hls_log_all.xml  hash_controller.cpp  hls.app
hash_controller/.apc/: autopilot.apfmapping
hash_controller/solution1/: script.tcl  solution1.aps  solution1.directive  solution1_data.json
hash_controller/solution1/.autopilot/: .automg_exit  .autopilot_exit
hash_controller/solution1/.autopilot/db/: .message_impl.xml  .message_syn.xml  __ctype_info__.xml  a.g.0.bc  a.g.2.bc  a.g.2.prechk.bc  a.g.ld.0.bc  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.o.1.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  all.directive.json  apatb_hash_controller.cpp  apatb_hash_controller_ir.bc  apatb_hash_controller_ir.ll  apatb_hash_controller_util.cpp  autopilot.rtl.models.tcl  autopilot.rtl.models.txt  burst.xml  design.bindinfo.xml  dut.hcp  egress.adb  egress.adb.xml  egress.aemf  egress.bind.adb  egress.bind.adb.xml  egress.compgen.tcl  egress.sched.adb  egress.sched.adb.xml  egress.tbgen.tcl  egress.verbose.bind.rpt  egress.verbose.rpt  egress.verbose.rpt.xml  egress.verbose.sched.rpt  egress.verbose.sched.rpt.xml  egress_1.adb  (+86 more)
hash_controller/solution1/.autopilot/db/coregen/: control.h  control.slave.tcl  hash_controller_control_s_axi.v
hash_controller/solution1/.autopilot/db/driver/data/: hash_controller.mdd  (+1 more)
hash_controller/solution1/.autopilot/db/vlog/: hash_controller_rd_0_m_axi.v  hash_controller_rd_1_m_axi.v  hash_controller_wr_1_m_axi.v
hash_controller/solution1/impl/ip/: auxiliary.xml  component.xml  hash_controller_info.xml  run_ippack.tcl  sysgen_info.xml  vivado.jou
hash_controller/solution1/impl/ip/constraints/: hash_controller_ooc.xdc
hash_controller/solution1/impl/ip/doc/: ReleaseNotes.txt
hash_controller/solution1/impl/ip/example/: ipi_example.sh
hash_controller/solution1/impl/ip/xgui/: hash_controller_v1_0.tcl
hash_controller/solution1/impl/verilog/: hash_controller.v  hash_controller_hls_deadlock_detection_unit.v  hash_controller_hls_deadlock_detector.vh  hash_controller_hls_deadlock_idx1_monitor.v  hash_controller_hls_deadlock_idx4_monitor.v  hash_controller_hls_deadlock_kernel_monitor_top.vh  hash_controller_hls_deadlock_report_unit.vh
hash_controller/solution1/impl/vhdl/: hash_controller_ingress.vhd  hash_controller_regslice_both.vhd
hash_controller/solution1/syn/report/: csynth.rpt  csynth.xml  egress_1_csynth.rpt  egress_1_csynth.xml  egress_csynth.rpt  egress_csynth.xml  hash_controller_csynth.rpt  hash_controller_csynth.xml  ingress_1_csynth.rpt  ingress_1_csynth.xml  ingress_csynth.rpt  ingress_csynth.xml  pass_csynth.rpt  pass_csynth.xml
hash_controller/solution1/syn/verilog/: hash_controller.v  hash_controller_egress.v  hash_controller_ingress.v  hash_controller_ingress_1.v  hash_controller_pass.v  hash_controller_regslice_both.v  hash_controller_wr_0_m_axi.v
hash_controller/solution1/syn/vhdl/: hash_controller.vhd  hash_controller_control_s_axi.vhd  hash_controller_egress.vhd  hash_controller_flow_control_loop_pipe.vhd  hash_controller_ingress_1.vhd  hash_controller_wr_0_m_axi.vhd  hash_controller_wr_1_m_axi.vhd
hash_cores/: .gitignore  CMakeLists.txt
hash_cores/include/hw/: state_matrix.h  warphash.h
hash_cores/reports/: csynth_blake_tail_f450.rpt  csynth_bmw_tail_f450.rpt  csynth_cubehash_tail_f450.rpt  csynth_groestl_tail_f450.rpt  csynth_jh_tail_f450.rpt  csynth_keccak_tail_f450.rpt  csynth_luffa_tail_f450.rpt  csynth_skein_tail_f450.rpt
hash_cores/scripts/: construct_warphash_static.tcl  csynth_hash.tcl  csynth_hash_engine.tcl  export_hash.tcl  export_hash_engine.tcl  ooc_impl_hash.tcl  ooc_synth_hash.tcl
hash_cores/src/hw/core/: blake.cpp  bmw.cpp  cubehash.cpp  groestl.cpp  jh.cpp  keccak.cpp  luffa.cpp  skein.cpp
hash_cores/test/hw/core/: hash_test.cpp
hash_cores/xdc/: ooc_f400.xdc  ooc_f450.xdc  ooc_f500.xdc  ooc_f625.xdc
(+15 files in other folders)
